dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookapp-service
spec:
  selector:
    app: bookapp
  ports:
    - port: 9898
      protocol: TCP
      targetPort: 8080
