dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /   
spec:
  rules:
  - host: "bookapp.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bookapp-service
            port:
              number: 9898
